--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
         <li id="clear" class="iconfont">&#xe833;</li>
     </ul>
     <ul class="shape">
-        <li id="line" title="直线"><i class="iconfont">&#xe606;</i></li>
-        <li id="dash" title="虚线"><i class="iconfont">&#xe667;</i></li>
-        <li id="pencil" title="铅笔"><i class="iconfont">&#xe601;</i></li>
-        <li id="circle" title="圆形"><i class="iconfont">&#xe605;</i></li>
-        <li id="rect" title="矩形"><i class="iconfont">&#xe619;</i></li>
-        <li id="ploy" title="多边形"><i class="iconfont">&#xe62a;</i></li>
-        <li id="ployJ" title="多角形"><i class="iconfont">&#xe612;</i></li>
-        <li id="eraser" title="橡皮擦"><i class="iconfont">&#xe6c5;</i></li>
+        <li id="line"><i class="iconfont">&#xe606;</i></li>
+        <li id="dash"><i class="iconfont">&#xe667;</i></li>
+        <li id="pencil" ><i class="iconfont">&#xe601;</i></li>
+        <li id="circle"><i class="iconfont">&#xe605;</i></li>
+        <li id="rect"><i class="iconfont">&#xe619;</i></li>
+        <li id="ploy"><i class="iconfont">&#xe62a;</i></li>
+        <li id="ployJ"><i class="iconfont">&#xe612;</i></li>
+        <li id="eraser"><i class="iconfont">&#xe6c5;</i></li>
     </ul>
     <ul class="style">
         <li id="fill" class="styleBtn"><i class="iconfont">&#xe649;</i></li>
